--- a/views/layout.html
+++ b/views/layout.html
@@ -42,7 +42,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="../navbar/">Default</a></li>
               <li><a href="../navbar-static-top/">Static top</a></li>
-              <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="/user">Login</span></a></li>
             </ul>
           </div><!--/.nav-collapse -->
       </div>
